RESOLVED FIXED67193
Web Inspector: Inspected page sometimes crashes in InspectorResourceAgent::didFailLoading
https://bugs.webkit.org/show_bug.cgi?id=67193
Summary Web Inspector: Inspected page sometimes crashes in InspectorResourceAgent::di...
Vsevolod Vlasov
Reported 2011-08-30 03:39:44 PDT
Attachments
Patch (2.03 KB, patch)
2011-08-30 04:29 PDT, Vsevolod Vlasov
no flags
Patch (2.11 KB, patch)
2011-08-30 07:26 PDT, Vsevolod Vlasov
pfeldman: review+
Vsevolod Vlasov
Comment 1 2011-08-30 04:29:37 PDT
Yury Semikhatsky
Comment 2 2011-08-30 06:41:53 PDT
Comment on attachment 105613 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=105613&action=review > Source/WebCore/inspector/InspectorResourceAgent.cpp:294 > + if (!loader || !loader->frame()) All this check should be in if (m_resourcesData->resourceType(requestId) == InspectorPageAgent::DocumentResource), shouldn't them?
Vsevolod Vlasov
Comment 3 2011-08-30 07:26:30 PDT
Vsevolod Vlasov
Comment 4 2011-08-30 08:27:55 PDT
Note You need to log in before you can comment on or make changes to this bug.