Web Inspector: Inspected page sometimes crashes in InspectorResourceAgent::didFailLoading https://bugs.webkit.org/show_bug.cgi?id=67193

Reviewed by Pavel Feldman.

* inspector/InspectorResourceAgent.cpp:
(WebCore::InspectorResourceAgent::didFailLoading):

Canonical link: https://commits.webkit.org/83008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94078 268f45cc-cd09-0410-ab3c-d52691b4dbfc